Make sure it's legible

--- a/static/src/stylesheets/base/_base.scss
+++ b/static/src/stylesheets/base/_base.scss
@@ -19,6 +19,7 @@ body {
 
 ::selection {
     background: $news-garnett-highlight;
+    color: $garnett-neutral-1;
 }
 
 /**
